--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
   ],
   "author": "Vince Nguyen",
   "scripts": {
-    "build": "node esbuild.js && yarn tsc"
+    "build": "node esbuild.js && yarn tsc",
+    "test": "jest"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "5.1.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.37",
     "esbuild": "^0.14.5",
+    "jest": "^26.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.5.4"
   }
 }
